// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cypress accessibility generator should correctly add accessibility should update the applications cypress.config.ts 1`] = `
"import { defineConfig } from 'cypress';

import { baseConfig } from '../../cypress.config.base';

export default defineConfig({
  ...baseConfig,
  e2e: {
    ...baseConfig.e2e,
    screenshotOnRunFailure: true,
    video: true,
    setupNodeEvents(on, config) {
      on('task', {
        log(message) {
          console.log(message);
          return null;
        },
        table(message) {
          console.table(message);
          return null;
        },
      });
    },
  },
});
"
`;

exports[`cypress accessibility generator should correctly update the setUpNodeEvents if it already exists 1`] = `
"export default defineConfig({
  ...baseConfig,
  e2e: {
    setupNodeEvents(on, config) {
      on('before:browser:launch', (file) => {
        //do something
      });

      on('task', {
        log(message) {
          console.log(message);
          return null;
        },
        table(message) {
          console.table(message);
          return null;
        },
      });
    },
  },
});
"
`;
